ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dset
spec:
  selector:
    matchLabels:
      name: all-pods
  template:
    metadata:
      labels:
        name: all-pods
    spec:
      containers:
        - name: c1
          image: nginx
